samples/_failures_safe/1761801572_229f2f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df89fc5f.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_df89fc5f.c:147:13: error: expected expression at end of input
  147 |             if (parser->current_token.type == TOKEN_IDENTIFIER ||
      |             ^~
./samples/SAFE/__tmp_df89fc5f.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_df89fc5f.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_df89fc5f.c:147:13: error: expected declaration or statement at end of input
